--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "tests"
   ],
   "dependencies": {
-    "pure": "^0.6.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "normalize-css": "^7.0.0",
+    "awesomplete": "https://github.com/LeaVerou/awesomplete.git#gh-pages"
   }
 }
